Update GitHub URL in configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ github_username: ekadet
 linkedin_username: ekadetov
 
 # Build Settings
-url: "https://ekadet.github.io"
+url: "https://ekadetov.github.io"
 baseurl: ""
 
 # Markdown Settings
